--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,10 @@ services:
       - FERNET_KEY=jsDPRErfv8Z_eVTnGfF8ywd19j4pyqE3NpdUBA_oRTo=
     volumes:
       - ./dags:/usr/local/airflow/dags
+      - ./plugins:/usr/local/airflow/plugins
       - ../projects:/usr/local/projects
+      - ..projects/redjam:/usr/local/airflow/dags/redjam
+      - ../projects/aa_demo_project:/usr/local/airflow/dags/aa_demo_project
     ports:
       - "8080:8080"
     command: webserver
